--- a/spring-cloud-order/pom.xml
+++ b/spring-cloud-order/pom.xml
@@ -7,7 +7,7 @@
 
     <parent>
         <groupId>com.tang</groupId>
-        <artifactId>springcloud-lcn</artifactId>
+        <artifactId>springcloud-seata</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -81,18 +81,12 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-
+        <!--seata-->
         <dependency>
-            <groupId>com.codingapi.txlcn</groupId>
-            <artifactId>txlcn-tc</artifactId>
-            <version>5.0.2.RELEASE</version>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.codingapi.txlcn</groupId>
-            <artifactId>txlcn-txmsg-netty</artifactId>
-            <version>5.0.2.RELEASE</version>
-        </dependency>
 
     </dependencies>
 
