--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -12,21 +11,21 @@
         <relativePath/>
     </parent>
 
-
     <groupId>com.tang</groupId>
-    <artifactId>springcloud-lcn</artifactId>
+    <artifactId>springcloud-seata</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
         <module>spring-cloud-eureka</module>
         <module>spring-cloud-order</module>
         <module>spring-cloud-stock</module>
-        <module>txlcn-tm</module>
     </modules>
 
 
     <dependencyManagement>
+
         <dependencies>
+
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -34,7 +33,21 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+<!--    seata 是 springcloud alibab 的组件        -->
+
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2.1.0.RELEASE</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+
         </dependencies>
+
+
+
     </dependencyManagement>
 
 
