--- a/spring-cloud-eureka/pom.xml
+++ b/spring-cloud-eureka/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.tang</groupId>
-        <artifactId>springcloud-lcn</artifactId>
+        <artifactId>springcloud-seata</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
