--- a/spring-cloud-stock/pom.xml
+++ b/spring-cloud-stock/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.tang</groupId>
-        <artifactId>springcloud-lcn</artifactId>
+        <artifactId>springcloud-seata</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -75,16 +75,10 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!--seata-->
         <dependency>
-            <groupId>com.codingapi.txlcn</groupId>
-            <artifactId>txlcn-tc</artifactId>
-            <version>5.0.2.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.codingapi.txlcn</groupId>
-            <artifactId>txlcn-txmsg-netty</artifactId>
-            <version>5.0.2.RELEASE</version>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
         </dependency>
 
 
